Bug 119266 - Nodes don't expand on double click in the Customize dialog
Summary: Nodes don't expand on double click in the Customize dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, needUITest, regression
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2018-08-14 07:53 UTC by Muhammet Kara
Modified: 2018-10-11 11:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammet Kara 2018-08-14 07:53:19 UTC
Reproduce:
1. Open the Customize dialog by following Tools > Customize...
2. Select 'Styles' from thecategory list box
3. Docuble click on the 'label' of a node in the Styles tree

Current behavior: Nothing happens
Ideal behavior: The node is is expanded

Seems like bug#117304 can't die and keeps coming back.

Doesn't happend in 6.1. So a regression. I will bibisect right away.
Comment 1 Muhammet Kara 2018-08-14 07:54:15 UTC
Version: 6.2.0.0.alpha0+
Build ID: 095e1ca4372d90da7fc56051f1271ddd975a9e3a
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 2 Muhammet Kara 2018-08-14 08:07:34 UTC
lo-linux-dbgutil-daily$ git bisect good 48d3dec49923ab108beedd5c0d0c377c1f0ea0c6 is the first bad commit
commit 48d3dec49923ab108beedd5c0d0c377c1f0ea0c6
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Fri Jul 13 07:08:17 2018 +0200

    2018-07-13: source-hash-1a8435a23e84f3ceeee580eb9d4404a738d98888

:100644 100644 94026ebfe9963a50578adac7f30dd30740729981 a2ead44d980e9be6813c45d14585a2805440c2b2 M	build-info.txt
:040000 040000 82162324109aeb3a4da09592d1821d1211c077dd 0ff9d1d36b31696914c9ae11bfcf16af3f697ba3 M	opt
Comment 3 Muhammet Kara 2018-08-14 12:40:09 UTC
 c9d1655d455ad783694e6d7f0d2e6cf3d0d0acae is the first bad commit
commit c9d1655d455ad783694e6d7f0d2e6cf3d0d0acae
Author: Eike Rathke <erack@redhat.com>
Date:   Tue Jul 10 11:13:57 2018 +0200

    Resolves: tdf#115950 proper double click return and bail out, tdf#117063
    
        commit b649ce123dea372359ec571135a68eb3de844e5b
        CommitDate: Sun Apr 29 08:46:46 2018 +0200
    
            tdf#117063 Modify tree list double click behavior in the navigator
    
    changed the return value in SvTreeListBox::DoubleClickHdl() from
    
      return !aDoubleClickHdl.IsSet() || aDoubleClickHdl.Call(this);
    
    to an unconditional true. Earlier there was
    
        commit 1b9af08481b8f7f4bd15a30508606dff56b8e74f
        CommitDate: Tue Mar 13 16:28:40 2018 +0100
    
            tdf#116334: Actually when there is no handler, we have to return 'true'.
    
        -    aDoubleClickHdl.Call( this );
        -    return false;
        +    return !aDoubleClickHdl.IsSet() || aDoubleClickHdl.Call(this);
    
    and before that
    
        commit 7651e57573952758032ceb88f16e2dbbb6cc4e18
        CommitDate: Thu Mar 1 15:41:13 2018 +0100
    
            tdf#115950: Indicate that the dialog was already destroyed.
    
        -    return true;
        +    return false;
    
    Neither a constant false or true are correct return values here,
    but only the value the double click handler, if any, returned to
    indicate whether processing should continue (true) or not (false).
    
    If handlers don't return a proper value so the intended behaviour
    for tdf#117063 or anything else does not work then fix the
    handlers instead.
    
    If the handler returned false then don't even attempt to access
    anything in SvImpLBox::MouseButtonDown() because an OK handler may
    have destroyed everything and all is rotten.
    
    Change-Id: Ia90c21288bedd7e5078dbe4b3dd6d9f5199a2a98
    Reviewed-on: https://gerrit.libreoffice.org/57225
    Tested-by: Jenkins
    Reviewed-by: Jan Holesovsky <kendy@collabora.com>
    Reviewed-by: Eike Rathke <erack@redhat.com>

:040000 040000 4dc4051d6590603a56885b51961440687be2a237 a67e148883822570d42c2a6dc8a89e132cdc8863 M	svtools
Comment 4 Xisco Faulí 2018-08-14 12:54:54 UTC
Adding Cc: to Eike Rathke
Comment 5 Thomas Lendo 2018-10-04 10:51:30 UTC
As this also affects other nodes in LibreOffice (for example in the Navigator but not in the Options dialog), I change the summary from 'Styles and Macros nodes don't expand on double click in the Customize dialog' to 'Nodes don't expand on double click in the Customize dialog and Navigator'. Maybe other nodes also are affected.
Comment 6 Muhammet Kara 2018-10-07 22:11:58 UTC
Couldn't reproduce on the navigator.

Maybe it seemed related since some nodes in the navigator have other purposes like going to the location of the item on double click.
Comment 7 Thomas Lendo 2018-10-07 22:46:48 UTC
Hm, on Ubuntu I cant reproduce as well. Will test on Windows tomorrow.
Comment 8 Commit Notification 2018-10-08 06:43:29 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=307c29ecbcd63b787374c5c2aefabdc4353d2723

tdf#119266: Nodes don't expand on double click in the Customize dialog

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Thomas Lendo 2018-10-08 07:26:03 UTC
(In reply to Muhammet Kara from comment #6)
> Couldn't reproduce on the navigator.
> 
> Maybe it seemed related since some nodes in the navigator have other
> purposes like going to the location of the item on double click.
Muhammet, which OS do you use? I couldn't reproduce it on Linux, but the bug in the Navigator is still there on Windows with OpenGL and OpenCL on.

Version: 6.2.0.0.alpha0+ (x64)
Build ID: e46f8a9a4e3c5b0542c0813b476b449f3af8d607
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-07_23:36:50
Locale: de-AT (de_AT); Calc: CL
Comment 10 Muhammet Kara 2018-10-09 07:28:57 UTC
(In reply to Thomas Lendo from comment #9)
> (In reply to Muhammet Kara from comment #6)
> > Couldn't reproduce on the navigator.
> > 
> > Maybe it seemed related since some nodes in the navigator have other
> > purposes like going to the location of the item on double click.
> Muhammet, which OS do you use? I couldn't reproduce it on Linux, but the bug
> in the Navigator is still there on Windows with OpenGL and OpenCL on.
> 
> Version: 6.2.0.0.alpha0+ (x64)
> Build ID: e46f8a9a4e3c5b0542c0813b476b449f3af8d607
> CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
> TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-07_23:36:50
> Locale: de-AT (de_AT); Calc: CL

I am on Linux.

Version: 6.2.0.0.alpha0+
Build ID: 6c97feec872e82711f58cce61b7796ed594e552c
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 11 Thomas Lendo 2018-10-10 07:23:05 UTC
I'll change back your summary and remove Navigator so that this bug is only for the Customize dialog's nodes. The Navigator issue seems to be related to Bug 36308 - [UI]Change behaviour for "tree view" on Writer's Navigator.

I confirm that double-clicking is possible in Customize dialog nodes again. Therefore I set the bug to RERSOLVED FIXED.

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 425af6845ebe066c950b0b63f50563e067485f3e
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-09_23:30:22
Locale: de-AT (de_AT); Calc: CL
Comment 12 Xisco Faulí 2018-10-11 08:20:05 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 59ed21b1720db5fd0326e1b723483b288725e662
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 13 Xisco Faulí 2018-10-11 08:21:54 UTC
Cherry-picked to 6-1: https://gerrit.libreoffice.org/#/c/61649/
Comment 14 Commit Notification 2018-10-11 11:09:29 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94b6b9b17c39edf7d3e1f8220f8d77bf21bf0f40&h=libreoffice-6-1

tdf#119266: Nodes don't expand on double click in the Customize dialog

It will be available in 6.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.