tdf#119266: Nodes don't expand on double click in the Customize dialog

Change-Id: I8b6667dc631df2fd38a8a2d99668b4a2336801b6
Reviewed-on: https://gerrit.libreoffice.org/61504
Tested-by: Jenkins
Reviewed-by: Muhammet Kara <muhammet.kara@pardus.org.tr>
(cherry picked from commit 307c29ecbcd63b787374c5c2aefabdc4353d2723)